[gd_scene load_steps=8 format=3 uid="uid://cew6ntfvt56mb"]

[ext_resource type="Script" uid="uid://dmu0ecgmuhbn0" path="res://Scenes/Menus/Level-interface/options_panel.gd" id="1_3ty3y"]
[ext_resource type="Script" uid="uid://d8uj56tymrcr" path="res://Scenes/Menus/Level-interface/music_slider.gd" id="1_yx23w"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_653rj"]
bg_color = Color(0.255659, 0.255659, 0.255659, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_n2qs3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7nfen"]
bg_color = Color(0.509286, 0.509286, 0.509286, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_67hr8"]
bg_color = Color(0.306923, 0.306923, 0.306923, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_trrwu"]
bg_color = Color(0.683077, 0.683077, 0.683077, 1)

[node name="options_panel" type="Panel"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -471.5
offset_top = -265.0
offset_right = 471.5
offset_bottom = 265.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3ty3y")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -198.0
offset_right = 198.0
offset_bottom = 61.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 35
text = "Options"
horizontal_alignment = 1

[node name="options_category" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.153
anchor_top = 0.5
anchor_right = 0.153
anchor_bottom = 0.5
offset_left = -105.279
offset_top = -188.0
offset_right = 104.721
offset_bottom = 215.0
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_653rj")

[node name="VBoxContainer" type="VBoxContainer" parent="options_category"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -85.5
offset_top = -181.5
offset_right = 85.5
offset_bottom = 181.5
grow_horizontal = 2
grow_vertical = 2

[node name="general_button" type="Button" parent="options_category/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 26
theme_override_styles/focus = SubResource("StyleBoxEmpty_n2qs3")
theme_override_styles/hover = SubResource("StyleBoxFlat_7nfen")
theme_override_styles/pressed = SubResource("StyleBoxFlat_67hr8")
theme_override_styles/normal = SubResource("StyleBoxFlat_trrwu")
text = "general"

[node name="audio_button" type="Button" parent="options_category/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 26
theme_override_styles/focus = SubResource("StyleBoxEmpty_n2qs3")
theme_override_styles/hover = SubResource("StyleBoxFlat_7nfen")
theme_override_styles/pressed = SubResource("StyleBoxFlat_67hr8")
theme_override_styles/normal = SubResource("StyleBoxFlat_trrwu")
text = "audio"

[node name="controlls_button" type="Button" parent="options_category/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 26
theme_override_styles/focus = SubResource("StyleBoxEmpty_n2qs3")
theme_override_styles/hover = SubResource("StyleBoxFlat_7nfen")
theme_override_styles/pressed = SubResource("StyleBoxFlat_67hr8")
theme_override_styles/normal = SubResource("StyleBoxFlat_trrwu")
text = "controls"

[node name="sub_general" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.634
anchor_top = 0.5
anchor_right = 0.634
anchor_bottom = 0.5
offset_left = -315.862
offset_top = -188.0
offset_right = 316.138
offset_bottom = 215.0
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_653rj")

[node name="general_title" type="Label" parent="sub_general"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -107.0
offset_right = 107.0
offset_bottom = 40.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 28
text = "General"
horizontal_alignment = 1

[node name="sub_audio" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.634
anchor_top = 0.5
anchor_right = 0.634
anchor_bottom = 0.5
offset_left = -315.862
offset_top = -188.0
offset_right = 316.138
offset_bottom = 215.0
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_653rj")

[node name="audio_title" type="Label" parent="sub_audio"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -107.0
offset_right = 107.0
offset_bottom = 40.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 28
text = "Audio"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="sub_audio"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -145.0
offset_top = -144.5
offset_right = 286.0
offset_bottom = 163.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50

[node name="master_slider" type="HSlider" parent="sub_audio/VBoxContainer"]
layout_mode = 2

[node name="music_slider" type="HSlider" parent="sub_audio/VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.01
value = 1.0
script = ExtResource("1_yx23w")
audio_bus_name = "Music"

[node name="SFX_slider" type="HSlider" parent="sub_audio/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="sub_audio"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -281.5
offset_top = -152.5
offset_right = -159.5
offset_bottom = 155.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 44

[node name="master_label" type="Label" parent="sub_audio/VBoxContainer2"]
layout_mode = 2
text = "Master"
horizontal_alignment = 1

[node name="music_label" type="Label" parent="sub_audio/VBoxContainer2"]
layout_mode = 2
text = "music"
horizontal_alignment = 1

[node name="FSX_label" type="Label" parent="sub_audio/VBoxContainer2"]
layout_mode = 2
text = "SFX"
horizontal_alignment = 1

[node name="sub_controls" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.634
anchor_top = 0.474
anchor_right = 0.634
anchor_bottom = 0.474
offset_left = -315.862
offset_top = -174.22
offset_right = 316.138
offset_bottom = 228.78
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_653rj")

[node name="controls_title" type="Label" parent="sub_controls"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -107.0
offset_right = 107.0
offset_bottom = 40.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 28
text = "Controls"
horizontal_alignment = 1

[node name="exit_button" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.977
anchor_top = 0.039
anchor_right = 0.977
anchor_bottom = 0.039
offset_left = -22.311
offset_top = -20.67
offset_right = 22.689
offset_bottom = 20.33
grow_horizontal = 0
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 26
theme_override_styles/focus = SubResource("StyleBoxEmpty_n2qs3")
theme_override_styles/hover = SubResource("StyleBoxFlat_7nfen")
theme_override_styles/pressed = SubResource("StyleBoxFlat_67hr8")
theme_override_styles/normal = SubResource("StyleBoxFlat_trrwu")
text = "X"

[connection signal="pressed" from="options_category/VBoxContainer/general_button" to="." method="_on_general_button_pressed"]
[connection signal="pressed" from="options_category/VBoxContainer/audio_button" to="." method="_on_audio_button_pressed"]
[connection signal="pressed" from="options_category/VBoxContainer/controlls_button" to="." method="_on_controlls_button_pressed"]
[connection signal="value_changed" from="sub_audio/VBoxContainer/music_slider" to="sub_audio/VBoxContainer/music_slider" method="_on_value_changed"]
[connection signal="pressed" from="exit_button" to="." method="_on_exit_button_pressed"]
